2003-04-26  Mikael Hallendal  <micke@codefactory.se>

        * loudmouth.spec.in: Enable gtk-doc
 
        * Released 0.9.1

2003-04-17  Mikael Hallendal  <micke@codefactory.se>

	* docs/reference/Makefile.am: Make --disable-gtk-doc not try to 
	  install the documents :) Fixes #633, patch by Kevin Dougherty.
	
	* loudmouth/lm-debug.c: Make build work with --disable-debug, 
	  fixes #634, patch by Kevin Dougherty.

2003-04-11  Mikael Hallendal  <micke@codefactory.se>

	* NEWS: More updates
	
	* configure.in: Bumped version to 0.9
	
	* loudmouth.spec.in: Fixed
	
	* loudmouth/lm-connection.c:
	(lm_connection_send_with_reply_and_block): Removed debug output.
	
2003-04-10  Mikael Hallendal  <micke@codefactory.se>

        * NEWS: Updated for upcoming 0.9 release.
	
2003-04-07  Mikael Hallendal  <micke@codefactory.se>

	* README: Added information about debug output.
	
	* loudmouth/lm-connection.c: 
	(connection_in_event): Use a define for IN_BUFFER_SIZE

2003-04-07  Mikael Hallendal  <micke@codefactory.se>

	* README:
	* loudmouth/lm-connection.c: (connection_in_event):

2003-04-07  Mikael Hallendal  <micke@codefactory.se>

	* configure.in:
        - Added debug flag.
	* loudmouth/Makefile.am:
	- Added lm-debug.[ch]
	* loudmouth/lm-internals.h: Added debug-stuff
	* loudmouth/lm-connection.c: Use debug-stuff instead of d()-macro.
	* loudmouth/lm-message.c: Same
	* loudmouth/lm-parser.c: Same

2003-04-05  Mikael Hallendal  <micke@codefactory.se>

	* Makefile.am: Added .spec and .spec.in to EXTRA_DIST
	* configure.in: Set GLIB2_REQUIRED, will be used in the spec-file.
	* loudmouth/lm-message.c:
	* loudmouth/lm-message.h:
	- fixed the support for message and presence elements without type 
	  attribute.

2003-04-01  Mikael Hallendal  <micke@codefactory.se>

	* loudmouth/lm-message.c:
	(lm_message_get_node): added, using for bindings.

	* loudmouth/lm-message-node.c:
	(lm_message_node_get_value): added, makes binding easier.